# SyncPoShopify

./: .gitignore  folder-structure.txt  helper_extract_data.py  helper_filter_products.py  helper_load_products.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas_db.sql
inventory_sync_app/: Dockerfile  conftest.py  procfile  pyproject.toml  run.py  run_tests.py
inventory_sync_app/src/: __init__.py
inventory_sync_app/src/application/: SyncInventoryUseCase.py
inventory_sync_app/src/domain/entities/: CacheInventoryLevel.py  CacheLocation.py  CacheProduct.py  ERPProduct.py  InventoryChange.py  KordataProduct.py  ProductSyncLog.py  ShopiProduct.py
inventory_sync_app/src/domain/repositories/: IChangeDetector.py  IERPDataExtractor.py  IInventoryLevelRepository.py  IProductRepository.py  IShopifyUpdater.py  ISyncLogRepository.py
inventory_sync_app/src/infrastructure/: ERPDataExtractor.py  PostgreSQLInventoryRepository.py  PostgreSQLSyncLogRepository.py  ShopifyInventoryUpdater.py  SmartChangeDetector.py
inventory_sync_app/src/presentation/: main.py
inventory_sync_app/src/shared/: __init__.py
inventory_sync_app/src/shared/config/: __init__.py  config_manager.py
inventory_sync_app/src/shared/logging/: __init__.py  logging_setup.py
inventory_sync_app/tests/: test_shopify_inventory_updater.py
